test2-2023-02-09.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.0698 seconds

  ----Wall Time----  ----Name----
    1.0649 ( 99.5%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.0068 ( 94.1%)    Parse modules
    0.0049 (  0.5%)  Rest
    1.0698 (100.0%)  Total

{
  totalTime: 1.082,
  maxMemory: 169541632
}
